Fixed front page products height on mobile.

--- a/wp-content/themes/epik/assets/sass/pages/_front-page.scss
+++ b/wp-content/themes/epik/assets/sass/pages/_front-page.scss
@@ -124,6 +124,7 @@
 
 			@include media($small-screen-up) {
 				@include span-columns(12 of 12);
+				max-height: none;
 			}
 		}
 
